--- a/src/resources/views/changepassword.hbs
+++ b/src/resources/views/changepassword.hbs
@@ -126,26 +126,60 @@
             .btn:hover {
                 background-color: #444;
             }
+            .wrapper-warning > img {
+                width: 50vw;
+            }
+            .wrapper-warning {
+                height: 100vh;
+                display: none;
+                flex-direction: column;
+                color: white;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+            }
+            @media only screen and (orientation:portrait) {
+                .wrapper-warning {
+                    display: flex;
+                }
+                .wrapper {
+                    display: none;
+                }
+            }
+
+            @media only screen and (orientation:landscape) {
+                .wrapper-warning {
+                    display: none;
+                }
+                .wrapper {
+                    display: block;
+                }
+            }
         </style>
     </head>
 
     <body>
-        <div class="container">
-            <form method="POST" action="/resetPassword/change/{{userId}}/{{resetString}}" class="change-password-form">
-                <h2 class="title">Thay đổi mật khẩu</h2>
-                
-                <div class="input-field1">
-                    <i class="fa fa-lock"></i>
-                    <input type="password" name="password" placeholder="Mật khẩu mới">
-                </div>  
-                <div class="input-field2">
-                    <i class="fa fa-lock"></i>
-                    <input type="password" name="password-change-confirm" placeholder="Xác nhận mật khẩu">
-                </div>                  
-                <button type="submit" class="btn">Xác nhận</button>
-            </form>
+        <div class="wrapper">
+            <div class="container">
+                <form method="POST" action="/resetPassword/change/{{userId}}/{{resetString}}" class="change-password-form">
+                    <h2 class="title">Thay đổi mật khẩu</h2>
+                    
+                    <div class="input-field1">
+                        <i class="fa fa-lock"></i>
+                        <input type="password" name="password" placeholder="Mật khẩu mới">
+                    </div>  
+                    <div class="input-field2">
+                        <i class="fa fa-lock"></i>
+                        <input type="password" name="password-change-confirm" placeholder="Xác nhận mật khẩu">
+                    </div>                  
+                    <button type="submit" class="btn">Xác nhận</button>
+                </form>
+            </div>
         </div>
-
+        <div class="wrapper-warning">
+            <img src="/assets/img/phone-rotate.png" alt="">
+            <div class="warning-content">Xoay ngang màn hình để tiếp tục sử dụng trang web</div>
+        </div>
         
     </body>
 </html>
