--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,4 +1,4 @@
-
+<div class="wrapper">
     <div id="header">
         <div class="left_header">
             <div class="logo">
@@ -28,9 +28,6 @@
                             
                         </div>                      
                     </div>                            
-                    <!-- <button class="button1">
-                                <b><a href="signin.html">Đăng nhập/ Đăng ký</a></b>
-                    </button> -->
                 </div>
 
         </div>
@@ -82,7 +79,6 @@
     
 
     <div class="modal_thuong" id ="team_modal_thuong">
-        <!-- <div class="select_mode_overlay"></div> -->
 
         <div class="select_normal_mode_body">
 
@@ -141,7 +137,6 @@
     </div>
 
     <div class="modal_xep_hang" id ="team_modal_xep_hang">
-        <!-- <div class="select_mode_overlay"></div> -->
 
         <div class="select_rank_mode_body">
 
@@ -249,7 +244,6 @@
                     </div>
 
                     <div class="select_rank_mode_button">
-                        {{!-- <form action="/home/roomcreate/" method="post" id = "create_room"><button type="submit" class="createclick" ><b>Tạo phòng</b></button></form> --}}
                         <button class="createclick" id="Roomcreate"><b>Tạo phòng</b></button>
                         <button class="playclick" id="play_now"> <b>Vào nhanh </b></button>
                     </div>
@@ -405,66 +399,6 @@
                         </thead>
                     </tr>
                     <tbody>
-                    <!--tr>
-                        <th class="top1">1</th>
-                        <th class="top1" id="usr">username</th>
-                        <th class="top1">challenger</th>
-                        <th class="top1">1000đ</th>
-                    </tr>
-                    <tr>
-                        <th class="top2">2</th>
-                        <th class="top2" id="usr">username</th>
-                        <th class="top2">challenger</th>
-                        <th class="top2">1000đ</th>
-                    </tr>
-                    <tr>
-                        <th class="top3">3</th>
-                        <th class="top3" id="usr">username</th>
-                        <th class="top3">challenger</th>
-                        <th class="top3">1000đ</th>
-                    </tr>
-                    <tr>
-                        <th>4</th>
-                        <th id="usr">username</th>
-                        <th>challenger</th>
-                        <th>1000đ</th>
-                    </tr>
-                    <tr>
-                        <th>5</th>
-                        <th id="usr">username</th>
-                        <th>challenger</th>
-                        <th>1000đ</th>
-                    </tr>
-                    <tr>
-                        <th>6</th>
-                        <th id="usr">username</th>
-                        <th>challenger</th>
-                        <th>1000đ</th>
-                    </tr>
-                    <tr>
-                        <th>7</th>
-                        <th id="usr">username</th>
-                        <th>challenger</th>
-                        <th>1000đ</th>
-                    </tr>
-                    <tr>
-                        <th>8</th>
-                        <th id="usr">username</th>
-                        <th>challenger</th>
-                        <th>1000đ</th>
-                    </tr>
-                    <tr>
-                        <th>9</th>
-                        <th id="usr">username</th>
-                        <th>challenger</th>
-                        <th>1000đ</th>
-                    </tr>
-                    <tr>
-                        <th>10</th>
-                        <th id="usr">username</th>
-                        <th>challenger</th>
-                        <th>1000đ</th>
-                    </tr-->
 
                     {{#each leaderboard}}
                         <tr class="mem">
@@ -505,7 +439,7 @@
                     <span style="padding-left: 10vh;">+Từ 6000 đến dưới 8000 điểm: Kim Cương. <br></span>
                     <span style="padding-left: 10vh;">+Từ 8000 đến dưới 12000 điểm: Ngọc Lục Bảo. <br></span>
                     <span style="padding-left: 10vh;">+Từ 12000 trở lên điểm: Ruby Đỏ. <br></span>
-            <span style="padding-left: 5vh;"></span>- Cấp độ: điểm cấp độ được lấy từ “Chế độ thường”, được phân cấp như sau:<br></span>
+            <span style="padding-left: 5vh;"></span>- Cấp độ: điểm cấp độ nhạn được khi chơi được phân cấp như sau:<br></span>
                     <span style="padding-left: 10vh;">+ Level 1: Điểm dưới 1000.<br></span>
                     <span style="padding-left: 10vh;">+ Level 2: Điểm từ 1000 đến dưới 2000.<br></span>
                     <span style="padding-left: 10vh;">+ Level 3: Điểm từ 2000 đến dưới 5000.<br></span>
@@ -521,45 +455,19 @@
             </p>
         </div>
     </div>
-
-    <!-- Thành tích -->
-    <!-- <div class="achievement" id="avm">
-        <div class="overlay">
-
-        </div>
-        <div class="avmbody">
-            <img src="assets/img/avatar.png" alt="avt">
-            <div class="avm">
-                <h1 class="avmheader">Achivement</h1>
-                <table class="avmtable">
-                    <tr>
-                        <th class="avmth" id="username"><img src="assets/img/Avatar_header.jpg" alt="avatar">Username: username</th>
-                        <th class="avmth" id="normal">Normal: 50/50</th>
-                    </tr>
-                    <tr>
-                        <th class="avmth" id="rank">Rank: challenger</th>
-                        <th class="avmth" id="point">Điểm rank: 1000đ</th>
-                    </tr>
-                    <tr>
-                        <th class="avmth" id="ranking">Đứng xếp hạng: 1</th>
-                        <th class="avmth" id="shortestime">Shortesttime: 1s</th>
-                    </tr>
-                </table>
-                <div><a href="#">Trở lại</a></div>
-            </div>
-        </div>
-    </div> -->
+</div>
+<div class="wrapper-warning">
+    <img src="/assets/img/phone-rotate.png" alt="">
+    <div class="warning-content">Xoay ngang màn hình để tiếp tục sử dụng trang web</div>
+</div>
     
-    
-    <script src="/modal_normal_rank.js"></script>
-    <script>
-        function disable(id) {
-            let waitbtn = document.getElementById(id);
-            waitbtn.disabled = true;
-            waitbtn.innerText = "Đang vào phòng ... ";
-            return true;
-        }
-    </script>
-    {{!-- <script src= "/multiplayer.js"></script> --}}
-    {{!-- <script src="/socket.io/socket.io.js"></script> --}}
+<script src="/modal_normal_rank.js"></script>
+<script>
+    function disable(id) {
+        let waitbtn = document.getElementById(id);
+        waitbtn.disabled = true;
+        waitbtn.innerText = "Đang vào phòng ... ";
+        return true;
+    }
+</script>
     
