--- a/src/resources/views/login.hbs
+++ b/src/resources/views/login.hbs
@@ -9,120 +9,158 @@
         <link rel="stylesheet" href="/assets/sign.css">
         <script src="https://apis.google.com/js/platform.js" async defer></script>
         <title>King of Melody</title>
+        <style type="text/css">
+            .wrapper-warning > img {
+                width: 50vw;
+            }
+            .wrapper-warning {
+                height: 100vh;
+                display: none;
+                flex-direction: column;
+                color: white;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+            }
+            @media only screen and (orientation:portrait) {
+                .wrapper-warning {
+                    display: flex;
+                }
+                .wrapper {
+                    display: none;
+                }
+            }
+
+            @media only screen and (orientation:landscape) {
+                .wrapper-warning {
+                    display: none;
+                }
+                .wrapper {
+                    display: block;
+                }
+            }
+        </style>
     </head>
 
     <body>
-        <div class="container">
-            <div class="signin-signup">
-                <form method="POST" action="/login/processSignin" class="sign-in-form">
-                    <h2 class="title">Đăng nhập</h2>
-                    {{#if messagesignin}}
-                        <div class="error-message">
-                            {{messagesignin}}
-                        </div>
-                    {{/if}}
-                    <div class="form-group">
-                        <div class="input-field">
-                            <i class="fa fa-user"></i>
-                            <input type="text" name="email" rules="required" placeholder="Email" id="email-sign-in">
-                            
-                        </div>
-                        
-                        <span class="form-message"></span>
-                    </div>
-                    <div class="form-group">
-                        <div class="input-field">
-                            <i class="fas fa-lock"></i>
-                            <input type="password" name="password" rules="required" placeholder="Mật khẩu" id="password-sign-in">
-                            
-                        </div>
-                        <span class="form-message"></span>
-                    </div>
-                    <div><a href="/resetPassword" style="color: rgb(223, 74, 223);">Quên mật khẩu?</a></div>
-                    
-                    <button type="submit" class="btn">Đăng nhập</button>
-
-                    <div class="google-sign-in">
-                        <a href="/login/google" class="btn-google">
-                            <div class="icon-gg">
-                                <i class="fa-brands fa-google"></i>
+        <div class="wrapper">
+            <div class="container">
+                <div class="signin-signup">
+                    <form method="POST" action="/login/processSignin" class="sign-in-form">
+                        <h2 class="title">Đăng nhập</h2>
+                        {{#if messagesignin}}
+                            <div class="error-message">
+                                {{messagesignin}}
                             </div>
-                            Đăng nhập với Google
-                        </a>
-                    </div>
-                </form>
-
-                <form method="POST" action="/login/processSignup" class="sign-up-form">
-                    <h2 class="title">Đăng ký</h2>
-                    {{#if messagesignup}}
-                        <script>
-                            const container1 = document.querySelector(".container");
-                            container1.classList.add("sign-up-mode");
-                        </script>
-                        <div class="error-message">
-                            {{messagesignup}}
-                        </div>
-                    {{/if}}
-                    <div class="form-group">
-                        <div class="input-field">
-                            <div class="input-container">
-                                <i class="fa fa-envelope"></i>
-                                <input type="text" rules="required|email" name="email" placeholder="Email" id="email-sign-up">
-                            </div>
-                        </div>
-                        <span class="form-message"></span>
-                    </div>
-                    <div class="form-group">
-                        <div class="input-field">
-                            <div class="input-container">
+                        {{/if}}
+                        <div class="form-group">
+                            <div class="input-field">
                                 <i class="fa fa-user"></i>
-                                <input type="text" rules="required" name="username" placeholder="Tên người dùng" id="username-sign-up">
+                                <input type="text" name="email" rules="required" placeholder="Email" id="email-sign-in">
+                                
                             </div>
                             
+                            <span class="form-message"></span>
                         </div>
-                        <span class="form-message"></span>
-                    </div>
-                    <div class="form-group">
-                        <div class="input-field">
-                            <div class="input-container">
+                        <div class="form-group">
+                            <div class="input-field">
                                 <i class="fas fa-lock"></i>
-                                <input type="password" rules="required|min:6" name="password" placeholder="Mật khẩu" id="password-sign-up">
+                                <input type="password" name="password" rules="required" placeholder="Mật khẩu" id="password-sign-in">
+                                
                             </div>
+                            <span class="form-message"></span>
                         </div>
-                        <span class="form-message"></span>
-                    </div>
-                    <div class="form-group">
-                        <div class="input-field">
-                            <div class="input-container">
-                                <i class="fas fa-lock"></i>
-                                <input type="password" rules="required|confirmed" name="password-comfirmation" placeholder="Nhập lại mật khẩu" id="password-sign-up-comfirmation">
+                        <div><a href="/resetPassword" style="color: rgb(223, 74, 223);">Quên mật khẩu?</a></div>
+                        
+                        <button type="submit" class="btn">Đăng nhập</button>
+
+                        <div class="google-sign-in">
+                            <a href="/login/google" class="btn-google">
+                                <div class="icon-gg">
+                                    <i class="fa-brands fa-google"></i>
+                                </div>
+                                Đăng nhập với Google
+                            </a>
+                        </div>
+                    </form>
+
+                    <form method="POST" action="/login/processSignup" class="sign-up-form">
+                        <h2 class="title">Đăng ký</h2>
+                        {{#if messagesignup}}
+                            <script>
+                                const container1 = document.querySelector(".container");
+                                container1.classList.add("sign-up-mode");
+                            </script>
+                            <div class="error-message">
+                                {{messagesignup}}
                             </div>
+                        {{/if}}
+                        <div class="form-group">
+                            <div class="input-field">
+                                <div class="input-container">
+                                    <i class="fa fa-envelope"></i>
+                                    <input type="text" rules="required|email" name="email" placeholder="Email" id="email-sign-up">
+                                </div>
+                            </div>
+                            <span class="form-message"></span>
                         </div>
-                        <span class="form-message"></span>
-                    </div>
-                    <button type="submit" class="btn">Đăng ký</button>
-                    <!-- {{!-- <input type="submit" value="Sign up" class="btn"> --}} -->
-                </form>
-            </div>
-            <div class="panels-container">
-                <div class="panel left-panel">
-                    <div class="content">
-                        <h3>Đã có tài khoản?</h3>
-                        <p>Nếu bạn đã có tài khoản, hãy nhấn "Đăng nhập" để đăng nhập vào chơi nhé!</p>
-                        <button class="btn" id="sign-in-btn">Đăng nhập</button>
-                    </div>
-                    <img src="/assets/img/sign-in.svg" alt="" class="image">
+                        <div class="form-group">
+                            <div class="input-field">
+                                <div class="input-container">
+                                    <i class="fa fa-user"></i>
+                                    <input type="text" rules="required" name="username" placeholder="Tên người dùng" id="username-sign-up">
+                                </div>
+                                
+                            </div>
+                            <span class="form-message"></span>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-field">
+                                <div class="input-container">
+                                    <i class="fas fa-lock"></i>
+                                    <input type="password" rules="required|min:6" name="password" placeholder="Mật khẩu" id="password-sign-up">
+                                </div>
+                            </div>
+                            <span class="form-message"></span>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-field">
+                                <div class="input-container">
+                                    <i class="fas fa-lock"></i>
+                                    <input type="password" rules="required|confirmed" name="password-comfirmation" placeholder="Nhập lại mật khẩu" id="password-sign-up-comfirmation">
+                                </div>
+                            </div>
+                            <span class="form-message"></span>
+                        </div>
+                        <button type="submit" class="btn">Đăng ký</button>
+                        <!-- {{!-- <input type="submit" value="Sign up" class="btn"> --}} -->
+                    </form>
                 </div>
-                <div class="panel right-panel">
-                    <div class="content">
-                        <h3>Người mới?</h3>
-                        <p>Nếu bạn chưa có tài khoản, hãy nhấn "Đăng ký" để đăng ký nhé!</p>
-                        <button class="btn" id="sign-up-btn">Đăng ký</button>
+                <div class="panels-container">
+                    <div class="panel left-panel">
+                        <div class="content">
+                            <h3>Đã có tài khoản?</h3>
+                            <p>Nếu bạn đã có tài khoản, hãy nhấn "Đăng nhập" để đăng nhập vào chơi nhé!</p>
+                            <button class="btn" id="sign-in-btn">Đăng nhập</button>
+                        </div>
+                        <img src="/assets/img/sign-in.svg" alt="" class="image">
                     </div>
-                    <img src="/assets/img/sign-up.svg" alt="" class="image">
+                    <div class="panel right-panel">
+                        <div class="content">
+                            <h3>Người mới?</h3>
+                            <p>Nếu bạn chưa có tài khoản, hãy nhấn "Đăng ký" để đăng ký nhé!</p>
+                            <button class="btn" id="sign-up-btn">Đăng ký</button>
+                        </div>
+                        <img src="/assets/img/sign-up.svg" alt="" class="image">
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="wrapper-warning">
+            <img src="/assets/img/phone-rotate.png" alt="">
+            <div class="warning-content">Xoay ngang màn hình để tiếp tục sử dụng trang web</div>
+        </div>
+        
         <script src="/resources/views/validator.js"></script>
         <script>
             Validator('.sign-up-form')
@@ -138,14 +176,6 @@
             sign_in_btn.addEventListener("click", () => {
                 container.classList.remove("sign-up-mode");
             });
-            /*document.addEventListener('DOMContentLoaded', function() {
-                var submitBtn = document.getElementById('submitBtn');
-                submitBtn.addEventListener('click', redirectToURL);
-            });
-            function redirectToURL(event) {
-                event.preventDefault(); 
-                window.location.href = "/";
-            }*/
 
         
         </script>
