--- a/src/resources/views/resetpassword.hbs
+++ b/src/resources/views/resetpassword.hbs
@@ -5,8 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" crossorigin="anonymous" />
-        {{!-- <link rel="stylesheet" href="../assets/sign.css"> --}}
-        <title>Signin-Signup</title>
+        <title>King of Melody</title>
         <style>
             @font-face {
             font-family: neosans;
@@ -98,19 +97,57 @@
                 background-color: #444;
             }
         </style>
+        <style type="text/css">
+            .wrapper-warning > img {
+                width: 50vw;
+            }
+            .wrapper-warning {
+                height: 100vh;
+                display: none;
+                flex-direction: column;
+                color: white;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+            }
+            @media only screen and (orientation:portrait) {
+                .wrapper-warning {
+                    display: flex;
+                }
+                .wrapper {
+                    display: none;
+                }
+            }
+
+            @media only screen and (orientation:landscape) {
+                .wrapper-warning {
+                    display: none;
+                }
+                .wrapper {
+                    display: block;
+                }
+            }
+        </style>
     </head>
 
     <body>
-        <div class="container">
-            <form method="POST" action="/resetPassword/process" class="reset-password-form">
-                <h2 class="title">Quên mật khẩu</h2>
-                
-                <div class="input-field">
-                    <i class="fa fa-user"></i>
-                    <input type="text" name="email" placeholder="Email">
-                </div>                   
-                <button type="submit" class="btn">Xác nhận</button>
-            </form>
+        <div class="wrapper">
+            <div class="container">
+                <form method="POST" action="/resetPassword/process" class="reset-password-form">
+                    <h2 class="title">Quên mật khẩu</h2>
+                    
+                    <div class="input-field">
+                        <i class="fa fa-user"></i>
+                        <input type="text" name="email" placeholder="Email">
+                    </div>                   
+                    <button type="submit" class="btn">Xác nhận</button>
+                </form>
+            </div>
         </div>
+        <div class="wrapper-warning">
+            <img src="/assets/img/phone-rotate.png" alt="">
+            <div class="warning-content">Xoay ngang màn hình để tiếp tục sử dụng trang web</div>
+        </div>
+        
     </body>
 </html>
