--- a/src/resources/views/changepasswordsuccess.hbs
+++ b/src/resources/views/changepasswordsuccess.hbs
@@ -73,17 +73,52 @@
             .btn:hover {
                 background-color: #444;
             }
+            .wrapper-warning > img {
+                width: 50vw;
+            }
+            .wrapper-warning {
+                height: 100vh;
+                display: none;
+                flex-direction: column;
+                color: white;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+            }
+            @media only screen and (orientation:portrait) {
+                .wrapper-warning {
+                    display: flex;
+                }
+                .wrapper {
+                    display: none;
+                }
+            }
+
+            @media only screen and (orientation:landscape) {
+                .wrapper-warning {
+                    display: none;
+                }
+                .wrapper {
+                    display: block;
+                }
+            }
         </style>
     </head>
 
     <body>
-        <div class="container">
-            <div class="input-field">
-                <h2 class="title-1">Thay đổi mật khẩu thành công</h2>
-                <i class="fa-solid fa-circle-check"></i>
-                <h3 class="guide">Bấm nút bên dưới để đăng nhập</h3>
-            </div>                   
-            <button class="btn"><a href="/login">Đăng nhập</a></button>
+        <div class="wrapper">
+            <div class="container">
+                <div class="input-field">
+                    <h2 class="title-1">Thay đổi mật khẩu thành công</h2>
+                    <i class="fa-solid fa-circle-check"></i>
+                    <h3 class="guide">Bấm nút bên dưới để đăng nhập</h3>
+                </div>                   
+                <button class="btn"><a href="/login">Đăng nhập</a></button>
+            </div>
+        </div>
+        <div class="wrapper-warning">
+            <img src="/assets/img/phone-rotate.png" alt="">
+            <div class="warning-content">Xoay ngang màn hình để tiếp tục sử dụng trang web</div>
         </div>
     </body>
 </html>
