--- a/src/resources/views/playmulti.hbs
+++ b/src/resources/views/playmulti.hbs
@@ -12,178 +12,210 @@
         integrity="sha512-+wqa4/aOL4vwhL637A4p+6epqhUHDqpEfYJa1+PlzlMf908CSOb3xtIeKwZWh5Q0Q/R2nYUKxH4vvcQg+k8KKQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.js" 
         integrity="sha512-dMiBqqEV5i3KqpAdsgQSSZ72DnNib7otY0X+b/Tnn1EmLym1dxuZ19csdZqBnfDniKd9bmNtzStQzuMrIa5Ngw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <style type="text/css">
+            .wrapper-warning > img {
+                width: 50vw;
+            }
+            .wrapper-warning {
+                height: 100vh;
+                display: none;
+                flex-direction: column;
+                color: white;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+            }
+            @media only screen and (orientation:portrait) {
+                .wrapper-warning {
+                    display: flex;
+                }
+                .wrapper {
+                    display: none;
+                }
+            }
+
+            @media only screen and (orientation:landscape) {
+                .wrapper-warning {
+                    display: none;
+                }
+                .wrapper {
+                    display: block;
+                }
+            }
+        </style>
     </head>
     <body>
-        <div class="container">
-            
-            <div class="play-area">
-                <div class="info">
-                    <div class="player1-info">
-                        <div class="player1-info-illustrator">
-                            <img src="/assets/img/ava-crop.png" alt="">
-                            <div class="score-parallelogram">
-                                <div class="score-wrapper">
-                                    <h2 class="score-label" id="Score_player1">0</h2> 
+        <div class="wrapper">
+            <div class="container">
+                
+                <div class="play-area">
+                    <div class="info">
+                        <div class="player1-info">
+                            <div class="player1-info-illustrator">
+                                <img src="/assets/img/ava-crop.png" alt="">
+                                <div class="score-parallelogram">
+                                    <div class="score-wrapper">
+                                        <h2 class="score-label" id="Score_player1">0</h2> 
+                                    </div>
                                 </div>
                             </div>
+                            <h2 class="player1-name" id="player1name">{{username_player1}}</h2>
                         </div>
-                        <h2 class="player1-name" id="player1name">{{username_player1}}</h2>
-                    </div>
-                    <div class="round-time">
-                        <div class="btn-back" id="btn_back">
-                            <a href="/home" id="href_back">
-                                <i class="fa-solid fa-arrow-left"></i>
-                            </a>
-                        </div>
-                        <div class="round-info">
-                            Vòng<br>
-                            <h3 id="Round_play">1/{{round1}}</h3>
-                        </div>
-                        <div class="time-info">
-                            Thời gian<br>
-                            <h3 id="Time_duration">12:30</h3>
-                        </div>
-                        <div class="room-info" id="room">
-                            Phòng<br>
-                            <h3>{{rom}}</h3>
-                        </div>
-                    </div>
-                    <div class="player2-info">
-                        <div class="player2-info-illustrator">
-                            <img src="/assets/img/ava-crop.png" alt="">
-                            <div class="score-parallelogram">
-                                <div class="score-wrapper">
-                                    <h2 class="score-label" id="Score_player2">0</h2> 
-                                </div>
+                        <div class="round-time">
+                            <div class="btn-back" id="btn_back">
+                                <a href="/home" id="href_back">
+                                    <i class="fa-solid fa-arrow-left"></i>
+                                </a>
+                            </div>
+                            <div class="round-info">
+                                Vòng<br>
+                                <h3 id="Round_play">1/{{round1}}</h3>
+                            </div>
+                            <div class="time-info">
+                                Thời gian<br>
+                                <h3 id="Time_duration">12:30</h3>
+                            </div>
+                            <div class="room-info" id="room">
+                                Phòng<br>
+                                <h3>{{rom}}</h3>
                             </div>
                         </div>
-                        <h2 class="player2-name" id="player2name">Hãy đợi người chơi 2</h2>
-                        <div class="subnav" id = "subnav">
-                            <div class="background">
-                                <div class="chat" id="message">HỒ SƠ</div>
+                        <div class="player2-info">
+                            <div class="player2-info-illustrator">
+                                <img src="/assets/img/ava-crop.png" alt="">
+                                <div class="score-parallelogram">
+                                    <div class="score-wrapper">
+                                        <h2 class="score-label" id="Score_player2">0</h2> 
+                                    </div>
+                                </div>
+                            </div>
+                            <h2 class="player2-name" id="player2name">Hãy đợi người chơi 2</h2>
+                            <div class="subnav" id = "subnav">
+                                <div class="background">
+                                    <div class="chat" id="message">HỒ SƠ</div>
+                                </div>
+                                
+                            </div>  
+                        </div>
+                    </div>
+                    
+                    <div class="disc">
+                        <div class="button">
+                            <div class="chat_">
+                                <div class="chat_player" id="chat_multi"><i class="fa-solid fa-message"></i></div>
                             </div>
                             
-                        </div>  
-                    </div>
-                </div>
-                
-                <div class="disc">
-                    <div class="button">
-                        <div class="chat_">
-                            <div class="chat_player" id="chat_multi"><i class="fa-solid fa-message"></i></div>
+                            <div class="circle">
+                                <div class="toggle"><i class="fa-solid fa-face-smile"></i></div>
+                                <li style="--i:0" class="like"><div><i class="fa-solid fa-thumbs-up"></i></div></li>
+                                <li style="--i:1" class="dislike"><div><i class="fa-solid fa-thumbs-down"></i></div></li>
+                                <li style="--i:2" class="sad"><div><i class="fa-solid fa-face-sad-cry"></i></div></li>
+                                <li style="--i:3" class="smile"><div><i class="fa-solid fa-face-laugh-beam"></i></div></li>
+                                <li style="--i:4" class="angry"><div><i class="fa-solid fa-face-angry"></i></div></li>
+                                <li style="--i:5" class="heart"><div><i class="fa-solid fa-face-grin-hearts"></i></div></li>
+                            </div>
                         </div>
                         
-                        <div class="circle">
-                            <div class="toggle"><i class="fa-solid fa-face-smile"></i></div>
-                            <li style="--i:0" class="like"><div><i class="fa-solid fa-thumbs-up"></i></div></li>
-                            <li style="--i:1" class="dislike"><div><i class="fa-solid fa-thumbs-down"></i></div></li>
-                            <li style="--i:2" class="sad"><div><i class="fa-solid fa-face-sad-cry"></i></div></li>
-                            <li style="--i:3" class="smile"><div><i class="fa-solid fa-face-laugh-beam"></i></div></li>
-                            <li style="--i:4" class="angry"><div><i class="fa-solid fa-face-angry"></i></div></li>
-                            <li style="--i:5" class="heart"><div><i class="fa-solid fa-face-grin-hearts"></i></div></li>
-                        </div>
-                    </div>
-                    
-                    <div class="disc_progress">
-                        <img src="/assets/img/dianhac2.png" class="discimg" id="music_disc" alt="disc">
-                        <div class="btn">
-                            <div><input type="range" value="0" id="progress"></div>
-                            
-                            <div id="progress-control">
-                                <div><i class="fa-solid fa-volume-low" id="decrease-volume"></i></div>
-                                <div><i class="fa-solid fa-pause" id="ctrlIcon"></i></div>
-                                <div><i class="fa-solid fa-volume-high" id="increase-volume"></i></div>
+                        <div class="disc_progress">
+                            <img src="/assets/img/dianhac2.png" class="discimg" id="music_disc" alt="disc">
+                            <div class="btn">
+                                <div><input type="range" value="0" id="progress"></div>
+                                
+                                <div id="progress-control">
+                                    <div><i class="fa-solid fa-volume-low" id="decrease-volume"></i></div>
+                                    <div><i class="fa-solid fa-pause" id="ctrlIcon"></i></div>
+                                    <div><i class="fa-solid fa-volume-high" id="increase-volume"></i></div>
+                                </div>
                             </div>
                         </div>
+                        
+                        
                     </div>
-                    
-                    
-                </div>
-                <div class="answer">
-                    <input type="text" id="answer_song" placeholder="Nhập tên bài hát">
-                    
-                    <button id="guessButton">Đoán</button>
+                    <div class="answer">
+                        <input type="text" id="answer_song" placeholder="Nhập tên bài hát">
+                        
+                        <button id="guessButton">Đoán</button>
+                    </div>
                 </div>
             </div>
-        </div>
-        
-        <div id="end-model">
-            <div class="bg-model">
-                <img src="/assets/img/music-wave.gif" alt="" class="rank_img">
-                <div class="end-model-content">
-                    <h2 id="end-result">Trò chơi kết thúc!</h2>
-                    <h3 id="end-model-score">Điểm của bạn: <span id="endpoint"></span> </h3>
-                </div>
-                <img src="/assets/img/music-wave.gif" alt="" class="rank_img">
-            </div>
-            <div class="img-model">
-                <img src="/assets/img/zero-two-02.gif" alt="" id="img-model-ava">
-            </div>
-            <div class="btn-model">
-                <button class="home-btn" id="btn-detail" >
-                    <span id="btn">
-                        <h3>Chi tiết</h3>
-                    <span>
-                </button>
-                <button class="home-btn" id="play_again" onclick="buttondisable('.home-btn-a','play_again')">
-                    {{!-- <a href="" class="home-btn-a" > --}}
-                        <h3>Chơi tiếp</h3>
-                    {{!-- </a> --}}
-                </button>
-                <button class="home-btn" id="home-btn">
-                    <a href="/home" class="home-btn-a">
-                        <h3>Trang chủ</h3>
-                    </a>
-                </button>
-            </div>
-        </div>
-        <div id="detail-model">
-            <div class="bg-model">
-                <img src="/assets/img/music-wave.gif" alt="" class="rank_img">
-                <div class="header">
+            
+            <div id="end-model">
+                <div class="bg-model">
+                    <img src="/assets/img/music-wave.gif" alt="" class="rank_img">
                     <div class="end-model-content">
-                        <h3 id="end-model-score">Điểm của bạn: <span id="detailendpoint"></span> </h3>
+                        <h2 id="end-result">Trò chơi kết thúc!</h2>
+                        <h3 id="end-model-score">Điểm của bạn: <span id="endpoint"></span> </h3>
                     </div>
-                    <div class="num-ans">
-                        <h3>Đúng: <span id="num-r"></span></h3>
-                        <h3>Sai: <span id="num-w"></span></h3>
+                    <img src="/assets/img/music-wave.gif" alt="" class="rank_img">
+                </div>
+                <div class="img-model">
+                    <img src="/assets/img/zero-two-02.gif" alt="" id="img-model-ava">
+                </div>
+                <div class="btn-model">
+                    <button class="home-btn" id="btn-detail" >
+                        <span id="btn">
+                            <h3>Chi tiết</h3>
+                        <span>
+                    </button>
+                    <button class="home-btn" id="play_again" onclick="buttondisable('.home-btn-a','play_again')">
+                            <h3>Chơi tiếp</h3>
+                    </button>
+                    <button class="home-btn" id="home-btn">
+                        <a href="/home" class="home-btn-a">
+                            <h3>Trang chủ</h3>
+                        </a>
+                    </button>
+                </div>
+            </div>
+            <div id="detail-model">
+                <div class="bg-model">
+                    <img src="/assets/img/music-wave.gif" alt="" class="rank_img">
+                    <div class="header">
+                        <div class="end-model-content">
+                            <h3 id="end-model-score">Điểm của bạn: <span id="detailendpoint"></span> </h3>
+                        </div>
+                        <div class="num-ans">
+                            <h3>Đúng: <span id="num-r"></span></h3>
+                            <h3>Sai: <span id="num-w"></span></h3>
+                        </div>
                     </div>
+                    <img src="/assets/img/music-wave.gif" alt="" class="rank_img">
                 </div>
-                <img src="/assets/img/music-wave.gif" alt="" class="rank_img">
-            </div>
-            <div class="song-detail">
-                <h2>Thông Tin Bài hát</h2>
-                {{#each infolist}}
-                <div class="songlist">
-                    <a href="{{this.link}}" target="_blank"><p>    {{this.name}} - {{this.singer}}</p></a>
+                <div class="song-detail">
+                    <h2>Thông Tin Bài hát</h2>
+                    {{#each infolist}}
+                    <div class="songlist">
+                        <a href="{{this.link}}" target="_blank"><p>    {{this.name}} - {{this.singer}}</p></a>
+                    </div>
+                    {{/each}}
                 </div>
-                {{/each}}
+                <div class="btn-model">
+                    <button class="home-btn-1" id="return">
+                        <h3>Trở lại</h3>
+                    </button>
+                    <button class="home-btn-1" id="play-again">
+                            <h3>Chơi tiếp</h3>
+                    </button>
+                    <button class="home-btn-1" id="home_render">
+                        <a href="/home" class="home-btn-a">
+                            <h3>Trang chủ</h3>
+                        </a>
+                    </button>
+                </div>
             </div>
-            <div class="btn-model">
-                <button class="home-btn-1" id="return">
-                    <h3>Trở lại</h3>
-                </button>
-                <button class="home-btn-1" id="play-again">
-                    {{!-- <a href="" class="home-btn-a"> --}}
-                        <h3>Chơi tiếp</h3>
-                    {{!-- </a> --}}
-                </button>
-                <button class="home-btn-1" id="home_render">
-                    <a href="/home" class="home-btn-a">
-                        <h3>Trang chủ</h3>
-                    </a>
-                </button>
+            <div class="send-field" style="opacity: 0;">
+                <div class="send-container">
+                    <input type="text" name="chat" placeholder="Nhập tin nhắn" maxlength="60" id="chat_play">
+                    <button id="sendbtn"><i class="fa-solid fa-circle-right" ></i></button>
+                </div>
             </div>
-        </div>
-        <div class="send-field" style="opacity: 0;">
-            <div class="send-container">
-                <input type="text" name="chat" placeholder="Nhập tin nhắn" maxlength="60" id="chat_play">
-                <button id="sendbtn"><i class="fa-solid fa-circle-right" ></i></button>
-            </div>
-        </div>
 
-        <div class="player2_icon"><i class="fa-solid fa-thumbs-up" id="icon_" style="display: none; color: #48f1eb;"></i></div>
-
+            <div class="player2_icon"><i class="fa-solid fa-thumbs-up" id="icon_" style="display: none; color: #48f1eb;"></i></div>
+        </div>
+        <div class="wrapper-warning">
+            <img src="/assets/img/phone-rotate.png" alt="">
+            <div class="warning-content">Xoay ngang màn hình để tiếp tục sử dụng trang web</div>
+        </div>
         <input type="hidden" id="songsInput" data-songs="{{songs}}">
         <input type="hidden" id="userid" data-user="{{userid}}">
         <input type="hidden" id="efInput" data-efvolume="{{efVL}}">
